--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.28.1",
+    "@clerk/nextjs": "^6.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.13.0",
     "lucide-react": "^0.536.0",
+    "multer": "^2.0.2",
     "next": "15.4.5",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-speech-recognition": "^4.0.1"
+    "react-speech-recognition": "^4.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-speech-recognition": "^3.9.6",
+    "@types/uuid": "^10.0.0",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
