--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@clerk/nextjs": "^6.30.0",
     "@google/generative-ai": "^0.24.1",
+    "@langchain/google-genai": "^0.2.16",
     "@prisma/client": "^6.13.0",
+    "langchain": "^0.3.30",
     "lucide-react": "^0.536.0",
+    "mammoth": "^1.10.0",
     "multer": "^2.0.2",
     "next": "15.4.5",
     "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-speech-recognition": "^4.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
